[package]
name = "hyper-routerify-swagger-ui"
version = "0.1.0"
authors = ["teamplayer3 <alex.teamplayer@gmail.com>"]
edition = "2021"
description = "Swagger-ui for rust applications with hyper and routerify integration"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swagger-ui = { version = "0.1", path = "../swagger-ui" }

http = "0.2.6"
routerify = "3.0.0"
serde_json = "1.0"
mime_guess = "2.0.4"
hyper = "0.14.18"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
hyper = {version = "0.14.18", features = ["server", "http1", "tcp"]}
